Update Itinerary Feature